@@ -10,6 +10,7 @@ Add the following jvm options when running tests or application with module-syst
 --add-exports=io.grpc/io.opencensus.trace=com.google.api.client
 --add-exports=io.grpc/io.opencensus.trace.propagation=com.google.api.client
 --add-exports=io.grpc/io.opencensus.trace.export=com.google.api.client
+--add-exports=io.grpc/io.opencensus.common=com.google.api.client
 --add-exports=io.grpc/io.opencensus.trace.propagation=opencensus.contrib.http.util
 --add-exports=io.grpc/io.opencensus.trace=opencensus.contrib.http.util
 ```
